tests/error/class-5.moc
@class Point {
    int x;
    int y;
}

-(int)x {
    return x;
}

-(int)x {
    return 42;
}

@end
